fix flickering

--- a/src/choropleth/styles.css
+++ b/src/choropleth/styles.css
@@ -92,7 +92,7 @@
 }
 
 #legends {
-    max-width: 270px;
+    min-width: 270px;
     @apply flex flex-col ml-8
 }
 
